feat: adjust the layout, optimizing scroll behaviour

--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -31,6 +31,9 @@
         <button id="chatHistoryBtn" class="icon-btn" aria-label="Chat History">
           <i class="fas fa-clock"></i>
         </button>
+        <button id="optionsBtn" class="icon-btn" aria-label="Options">
+          <i class="fas fa-cog"></i>
+        </button>
       </div>
     </header>
 
@@ -62,15 +65,10 @@
             rows="1"
             maxlength="4000"
           ></textarea>
+          <button id="sendBtn" class="icon-btn send-btn" aria-label="Send Message" disabled>
+            <i class="fas fa-paper-plane"></i>
+          </button>
         </div>
-
-        <button id="sendBtn" class="icon-btn send-btn" aria-label="Send Message" disabled>
-          <i class="fas fa-paper-plane"></i>
-        </button>
-
-        <button id="optionsBtn" class="icon-btn options-btn" aria-label="Options">
-          <i class="fas fa-cog"></i>
-        </button>
       </div>
     </footer>
 
