fix: add options footer

--- a/options/options.html
+++ b/options/options.html
@@ -99,6 +99,10 @@
       </div>
       <button id="saveBtn" class="btn btn-primary">Save Configuration</button>
     </footer>
+
+    <div class="copyright">
+      © oyasmi@yeah.net 2025
+    </div>
   </div>
 
   <!-- Modals -->
