feat: add theme selector

--- a/options/options.html
+++ b/options/options.html
@@ -88,6 +88,16 @@
           <input type="text" id="customFontFamilyInput" class="text-input hidden" placeholder="Enter custom font family (e.g., 'Arial', 'Times New Roman')">
           <small class="parameter-description">Controls the font family used in the sidebar.</small>
         </div>
+
+        <div class="parameter-group">
+          <label for="themeSelector">Theme</label>
+          <select id="themeSelector" class="select-input">
+            <option value="light">Light</option>
+            <option value="dark">Dark</option>
+            <option value="system">Follow System</option>
+          </select>
+          <small class="parameter-description">Choose the color theme for the sidebar interface.</small>
+        </div>
       </section>
     </main>
 
