--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -65,8 +65,9 @@
             rows="1"
             maxlength="4000"
           ></textarea>
-          <button id="sendBtn" class="icon-btn send-btn" aria-label="Send Message" disabled>
-            <i class="fas fa-paper-plane"></i>
+          <button id="sendBtn" class="icon-btn send-btn" aria-label="Send Message" disabled data-state="send">
+            <i class="fas fa-paper-plane send-icon"></i>
+            <i class="fas fa-spinner stop-icon hidden"></i>
           </button>
         </div>
       </div>
