--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -93,7 +93,7 @@
   </div>
 
   
-  <script src="marked.min.js"></script>
+  <script src="marked.umd.js"></script>
   <script src="sidebar.js"></script>
 </body>
 </html>
