--- a/options/options.html
+++ b/options/options.html
@@ -111,7 +111,7 @@
     </footer>
 
     <div class="copyright">
-      © oyasmi@yeah.net 2025
+      © cu.terminal@gmail.com 2025
     </div>
   </div>
 
